# Sportify-Music-Analysis

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  download_spark_jars.sh  pyproject.toml  requirements.txt
containers/airflow/: Dockerfile
containers/airflow/scripts/: create_connection.sh
containers/kafka/scripts/: create-connector.sh
containers/spark/: Dockerfile  spark-defaults.conf
migration/bigquery/: 0.3.0.sql  0.4.0.sql
migration/clickhouse/: 0.2.0.sql
migration/crawler/: 0.1.0.sql
spotify_web/: Dockerfile  Makefile  api.py  pyproject.toml  requirements.txt  service.py
src/cli/: auth.py  consumer.py  etl.py  ingest.py  monitor.py
src/configs/: crawler.py  kafka.py  logger.py  spark.py
src/consumers/: album.py  artist.py  monitor.py  playlist.py  track.py  track_plays_count.py
src/crawler/: base.py  exceptions.py  flow.py
src/crawler/models/: __init__.py  album.py  artist.py  artist_album.py  artist_track.py  base.py  crawler_tracking.py  playlist.py  playlist_track.py  track.py  user.py
src/crawler/schemas/: __init__.py  album_value.avsc  artist_value.avsc  crawler_key.avsc  monitor_value.avsc  playlist_value.avsc  track_value.avsc  user_value.avsc
src/crawler/services/: base.py  parser.py  spotify.py  web_api.py
src/dags/: spotify.py
src/helpers/: gcs.py
src/infratructure/kafka/: consumer.py  producer.py
src/infratructure/postgres/: repository.py
src/infratructure/spark/: app.py
src/pipelines/: constants.py  ingestor.py  loader.py  transformer.py
src/utils/: common.py
terraform/: main.tf  provider.tf
(+17 files in other folders)
